--- a/RecipeApp/views/contact.html
+++ b/RecipeApp/views/contact.html
@@ -50,7 +50,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="header head">
 	<div class="container">
 		<div class="logo">
-			<h1><a href="index.html"><span>C</span><img src="/images/oo.png" alt=""><img src="/images/oo.png" alt="">kery</a></h1>
+			<h1><a href="/index"><span>C</span><img src="/images/oo.png" alt=""><img src="/images/oo.png" alt="">kery</a></h1>
 		</div>
 		<div class="nav-icon">
 			<a href="#" class="navicon"></a>
@@ -59,6 +59,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a class="active" href="/index">Home</a></li>
 						<li><a  href="/myform">Upload Recipe</a></li>
 						<li><a  href="/yourdish">Prepare Your Dish</a></li>
+						<li><a  href="/myview">View All Dishes</a></li>
 						<li><a  href="/contact">Contact</a></li>
 					</ul>
 				</div>
@@ -85,7 +86,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<span>Let us know how we can cook a better website!</span>
 				</div>
 				<div class="col-md-8 menu-right animated wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="500ms">
-					
+
 				<p><b>Meet our team!</b></p>
 				<ul style="list-style-type:none;">
 						<li style="float:left; padding-right:100px;padding-bottom:10px;">Sanjay P Josh</li>
@@ -160,11 +161,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="footer-head">
 				<div class="col-md-8 footer-top animated wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="500ms">
 					<ul class=" in">
-						<li><a href="index.html">Home</a></li>
-						<li><a  href="menu.html">Menu</a></li>
-						<li><a  href="blog.html">Blog</a></li>
-						<li><a  href="events.html">Events</a></li>
-						<li><a  href="contact.html">Contact</a></li>
+						<li><a class="active" href="/index">Home</a></li>
+						<li><a  href="/myform">Upload Recipe</a></li>
+						<li><a  href="/yourdish">Prepare Your Dish</a></li>
+						<li><a  href="/myview">View All Dishes</a></li>
+						<li><a  href="/contact">Contact</a></li>
 					</ul>
 						<span>There are many variations of passages</span>
 				</div>
