--- a/RecipeApp/views/yourdish.html
+++ b/RecipeApp/views/yourdish.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="/javascripts/jquery.min.js"></script>
     <script type="text/javascript" src="/javascripts/bootstrap.js"></script>
     <script type="text/javascript" src="/javascripts/dynamic.js"></script>
-	
+
   <link href="/stylesheets/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="/javascripts/jquery.min.js"></script>
@@ -42,14 +42,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script src="/javascripts/wow.min.js"></script>
 <script>
  new WOW().init();
-</script> 
+</script>
   </head>
-  
+
   <body style="background: #384047;">
-  
+
 <div class="container" style="background-color:black;color:white;padding:20px;">
     <div class="logo animated wow pulse" data-wow-duration="1000ms" data-wow-delay="500ms">
-      <h1><a href="index.html"><span>C</span><img src="/images/oo.png" alt=""><img src="/images/oo.png" alt="">kery</a></h1>
+      <h1><a href="/index"><span>C</span><img src="/images/oo.png" alt=""><img src="/images/oo.png" alt="">kery</a></h1>
     </div>
     <div class="nav-icon">
       <a href="" class="navicon"></a>
@@ -72,8 +72,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   <div class="clearfix"></div>
   </div>
   </form>
-</div>  
-  
+</div>
+
     <div class="hidden-field">
       <input class="niv" type="text" name="ingredients[]" />
       <span >
