--- a/RecipeApp/views/index.html
+++ b/RecipeApp/views/index.html
@@ -50,15 +50,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
  <div class="header">
 	<div class="container">
 		<div class="logo animated wow pulse" data-wow-duration="1000ms" data-wow-delay="500ms">
-			<h1><a href="index.html"><span>C</span><img src="/images/oo.png" alt=""><img src="/images/oo.png" alt="">kery</a></h1>
+			<h1><a href="/index"><span>C</span><img src="/images/oo.png" alt=""><img src="/images/oo.png" alt="">kery</a></h1>
 		</div>
 		<div class="nav-icon">
 			<a href="" class="navicon"></a>
 				<div class="toggle">
 					<ul class="toggle-menu">
 						<li><a class="active" href="/index">Home</a></li>
-						<li><a  href="/recipeform">Upload Recipe</a></li>
+						<li><a  href="/myform">Upload Recipe</a></li>
 						<li><a  href="/yourdish">Prepare Your Dish</a></li>
+						<li><a  href="/myview">View All Dishes</a></li>
 						<li><a  href="/contact">Contact</a></li>
 					</ul>
 				</div>
@@ -331,8 +332,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-8 footer-top animated wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="500ms">
 					<ul class=" in">
 						<li><a href="/index">Home</a></li>
-						<li><a  href="/recipeform">Upload Recipe</a></li>
+						<li><a  href="/myform">Upload Recipe</a></li>
 						<li><a  href="/yourdish">Prepare Your Dish</a></li>
+						<li><a  href="/myview">View All Dishes</a></li>
 						<li><a  href="/contact">Contact</a></li>
 					</ul>
 						<span>Tell us what you liked about us!</span>
